Fix flag and code spacing: move flag right, code left

--- a/src/styles/phone-input.css
+++ b/src/styles/phone-input.css
@@ -73,8 +73,8 @@
 }
 
 .PhoneInputCountryFlag {
-  margin-right: 0.5rem;
-  margin-left: 0.375rem;
+  margin-right: 0.25rem;
+  margin-left: 0.625rem;
   height: 1em;
   width: 1.33em;
   flex-shrink: 0;
